@@ -1,4 +1,6 @@
 EXTRA_DIST = \
+        acx_pthread.m4 \
+        ftflib.m4 \
         gl.m4 \
         glut.m4 \
         jni.m4 \
